# benches-rs

./: Cargo.toml  run.sh  single-branch-speedup.sh  speedup.sh
scripts/: busy-wait-dynamic.sh  busy-wait.sh  explore-parameters.sh  performance-scaling.sh  single-branch-speedup.sh  speedup-distributed-algorithm.sh  speedup.sh
src/: app_args.rs  bench_record.rs  benchable.rs  benchable_ext.rs  main.rs
src/algorithms/: mod.rs
src/algorithms/busy/: mod.rs
src/algorithms/frog_jump/: frog_jump.rs  inputs.rs  marks.rs  places.rs
src/algorithms/life/: life.rs  mod.rs
src/algorithms/merge_sort/: merge_sort.rs
src/algorithms/nbody/: mod.rs
src/algorithms/quicksort/: mod.rs
src/algorithms/tsp/: mod.rs  solver.rs  step.rs
src/frog_jump/: frog_jump.rs  inputs.rs  mod.rs  places.rs  search.rs
src/life/: life.rs
src/merge_sort/: merge_sort.rs  mod.rs
src/nbody/: mod.rs
src/quicksort/: mod.rs
src/tsp/: mod.rs
