[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinscher = { path = "../pinscher" }
rayon = { path = "../rayon-fork" }
diam = { path = "../diam" }
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
itertools = "0.10.3"
clap = { version = "3.1.18", features = ["derive"] }
scc = "0.7.1"
rand_xorshift = "0.3"
cgmath = "0.18"
